@@ -1,3 +1,15 @@
+2009-06-05  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.com>
+
+        Bug 26188: Clarify some of the cases in the coding style guide
+
+        <https://bugs.webkit.org/show_bug.cgi?id=26188>
+
+        Reviewed and tweaked by David Kilzer.
+
+        Changed the coding style document to clarify some cases of ambiguity.
+
+        * coding/coding-style.html:
+
 2009-05-27  Maciej Stachowiak  <mjs@apple.com>
 
         Not reviewed, demo content.
